# tp-testing

marco_practico/: CMakeLists.txt
marco_practico/drone_libraries/: CMakeLists.txt  drone.cpp  drone.h  manejador_drone.cpp  manejador_drone.h
marco_practico/main/: CMakeLists.txt  main.cpp
marco_practico/main-test/: Test.cpp
marco_teorico/: CMakeLists.txt  main.cpp
marco_teorico/src/: dog.cpp  dog.hpp
